fix images align styles

--- a/app/assets/styles/blocks/_product-card.scss
+++ b/app/assets/styles/blocks/_product-card.scss
@@ -27,6 +27,8 @@
   &__image {
     // aspect-ratio: 1;
     margin-bottom: 31px;
+    overflow: hidden;
+    width: 100%;
     height: 180px;
     display: flex;
     align-items: center;
@@ -40,8 +42,8 @@
 
     img {
       height: 100%;
-      -o-object-fit: contain;
-      object-fit: contain;
+      -o-object-fit: cover;
+      object-fit: cover;
       width: 100%;
     }
   }
